Revert "fixed layout issue of add game"

--- a/resources/assets/sass/pages/_home.scss
+++ b/resources/assets/sass/pages/_home.scss
@@ -1325,7 +1325,6 @@ section#content-container {
                   font-size: 16px;
                   margin-right: 10px;
                   font-weight: bold;
-                  color: #fff;
                 }
                 .comment-content {
                   color: #93a4a5;
@@ -1675,7 +1674,8 @@ section#content-container {
       letter-spacing: 0px;
       color: #1d2326;
       opacity: 1;
-      background: url('https://mygame-media.s3.amazonaws.com/platform_images/Dashboard/X_icon.svg') 0% 0% no-repeat padding-box;
+      background: url('https://mygame-media.s3.amazonaws.com/platform_images/Dashboard/X_icon.svg') 0% 0% no-repeat
+        padding-box;
       border: none;
       border-radius: 50%;
       width: 32px;
@@ -2082,7 +2082,8 @@ section#content-container {
           .cancel {
             font: 20px/0px Montserrat;
             letter-spacing: 0px;
-            background: url('https://mygame-media.s3.amazonaws.com/platform_images/Dashboard/X_icon.svg') 0% 0% no-repeat padding-box;
+            background: url('https://mygame-media.s3.amazonaws.com/platform_images/Dashboard/X_icon.svg') 0% 0% no-repeat
+              padding-box;
             color: #1d2326;
             opacity: 1;
             border: none;
